--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "description": "Forward permissions through iframes",
   "main": "main.dist.js",
-  "module": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup --config"
@@ -15,7 +14,9 @@
     "@babel/plugin-proposal-decorators": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@rollup/plugin-babel": "^5.0.4",
-    "rollup": "^2.18.1"
+    "@rollup/plugin-node-resolve": "^8.1.0",
+    "rollup": "^2.18.1",
+    "rollup-plugin-serve": "^1.0.1"
   },
   "dependencies": {
     "uuid": "^8.2.0"
