--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.dist.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup --config"
+    "build": "rollup --config",
+    "build:watch": "rollup --config --watch"
   },
   "author": "",
   "license": "ISC",
