--- a/package.json
+++ b/package.json
@@ -19,7 +19,5 @@
     "rollup": "^2.18.1",
     "rollup-plugin-serve": "^1.0.1"
   },
-  "dependencies": {
-    "uuid": "^8.2.0"
-  }
+  "dependencies": {}
 }
